--- a/package.json
+++ b/package.json
@@ -18,15 +18,26 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migrate:create": "pnpm typeorm migration:create",
+    "migrate:g": "pnpm typeorm -d ./src/config/data-source.ts migration:generate",
+    "migrate:run": "pnpm typeorm migration:run -d ./src/config/data-source.ts",
+    "migrate:rollback": "pnpm typeorm -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "10.2.5",
+    "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.5",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.2.5",
+    "@nestjs/typeorm": "10.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "pg": "8.11.3",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "typeorm": "0.3.17"
   },
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
