fix: prop type of order table changed

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST = localhost
 DB_NAME = laurus_shop_db
-DB_USER = admin
+DB_USER = postgres
 DB_PASSWORD = admin1234
 DB_PORT= 5432
 DB_PROVIDER = postgres
