--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "@nestjs/common": "10.2.5",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.5",
+    "@nestjs/jwt": "10.1.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.2.5",
     "@nestjs/typeorm": "10.0.0",
+    "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
     "pg": "8.11.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
@@ -45,9 +50,11 @@
     "@nestjs/cli": "10.1.17",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.2.5",
+    "@types/bcrypt": "5.0.1",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.5",
     "@types/node": "20.6.2",
+    "@types/passport-jwt": "3.0.12",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
