--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "migrate:rollback": "pnpm typeorm -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "10.2.5",
+    "@nestjs/common": "10.2.8",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.5",
+    "@nestjs/core": "10.2.8",
     "@nestjs/jwt": "10.1.1",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "2.0.2",
     "@nestjs/passport": "10.0.2",
-    "@nestjs/platform-express": "10.2.5",
+    "@nestjs/platform-express": "10.2.8",
     "@nestjs/typeorm": "10.0.0",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
@@ -47,20 +47,20 @@
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
-    "@nestjs/cli": "10.1.17",
+    "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.2",
-    "@nestjs/testing": "10.2.5",
+    "@nestjs/testing": "10.2.8",
     "@types/bcrypt": "5.0.1",
-    "@types/express": "4.17.17",
-    "@types/jest": "29.5.5",
-    "@types/node": "20.6.2",
+    "@types/express": "4.17.20",
+    "@types/jest": "29.5.7",
+    "@types/node": "20.8.10",
     "@types/passport-jwt": "3.0.12",
-    "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "6.7.0",
-    "eslint": "8.49.0",
+    "@types/supertest": "2.0.15",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "eslint": "8.53.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-prettier": "5.0.1",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "lint-staged": "14.0.1",
@@ -68,7 +68,7 @@
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
-    "ts-loader": "9.4.4",
+    "ts-loader": "9.5.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.2.2"
