--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,15 @@
-version: '3.8'
+version: '3.9'
 
 services:
   db:
-    image: postgres:15.4
+    image: postgres:15.6
     restart: always
     ports:
       - '${DB_PORT}:${DB_PORT}'
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    container_name: postgres_db
+      POSTGRES_USER: ${DB_USER}
+    container_name: db
     volumes:
       - ./db:/var/lib/postgresql/data
